# RaspenBeere

./: .gitignore  .pre-commit-config.yaml  main.py  pi_hole.sh  pyproject.toml  requirements.txt  sensor_loop.py  settings.sh  update.sh
data/: whitelist.json
raspen_beere/: bot.py  dht22.py  file.py  sensor.py
